Closed
Bug 1420902
Opened 8 years ago
Closed 8 years ago
Null crash [@ mozilla::dom::TabChild::RemoteSizeShellTo]
Categories
(Core :: DOM: Navigation, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla59
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox57 | --- | wontfix |
| firefox58 | --- | wontfix |
| firefox59 | --- | fixed |
People
(Reporter: jkratzer, Assigned: mconley)
References
(Blocks 1 open bug)
Details
(Keywords: crash, testcase)
Attachments
(2 files)
Found while fuzzing mozilla-central rev cad9c9573579. Will update once testcase has been reduced.
==20997==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000000 (pc 0x7f2d9ae84b25 bp 0x7fffba5487b0 sp 0x7fffba5485e0 T0)
==20997==The signal is caused by a READ memory access.
==20997==Hint: address points to the zero page.
#0 0x7f2d9ae84b24 in mozilla::dom::TabChild::RemoteSizeShellTo(int, int, int, int) /builds/worker/workspace/build/src/dom/ipc/TabChild.cpp
#1 0x7f2d9f36af4d in nsDocShellTreeOwner::SizeShellTo(nsIDocShellTreeItem*, int, int) /builds/worker/workspace/build/src/docshell/base/nsDocShellTreeOwner.cpp:414:24
#2 0x7f2d972db75c in nsGlobalWindowOuter::SizeToContentOuter(mozilla::dom::CallerType, mozilla::ErrorResult&) /builds/worker/workspace/build/src/dom/base/nsGlobalWindowOuter.cpp:5405:23
#3 0x7f2d98bdf280 in mozilla::dom::WindowBinding::sizeToContent(JSContext*, JS::Handle<JSObject*>, nsGlobalWindowInner*, JSJitMethodCallArgs const&) /builds/worker/workspace/build/src/obj-firefox/dom/bindings/WindowBinding.cpp:4351:9
#4 0x7f2d98bd42b0 in mozilla::dom::WindowBinding::genericMethod(JSContext*, unsigned int, JS::Value*) /builds/worker/workspace/build/src/obj-firefox/dom/bindings/WindowBinding.cpp:15333:13
#5 0x7f2da00a16a1 in CallJSNative /builds/worker/workspace/build/src/js/src/jscntxtinlines.h:291:15
#6 0x7f2da00a16a1 in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct) /builds/worker/workspace/build/src/js/src/vm/Interpreter.cpp:473
#7 0x7f2da00a2632 in js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>) /builds/worker/workspace/build/src/js/src/vm/Interpreter.cpp:541:10
#8 0x7f2da0e7bf82 in js::ForwardingProxyHandler::call(JSContext*, JS::Handle<JSObject*>, JS::CallArgs const&) const /builds/worker/workspace/build/src/js/src/proxy/Wrapper.cpp:176:12
#9 0x7f2da0e29a6d in js::CrossCompartmentWrapper::call(JSContext*, JS::Handle<JSObject*>, JS::CallArgs const&) const /builds/worker/workspace/build/src/js/src/proxy/CrossCompartmentWrapper.cpp:358:23
#10 0x7f2da0e5a181 in js::Proxy::call(JSContext*, JS::Handle<JSObject*>, JS::CallArgs const&) /builds/worker/workspace/build/src/js/src/proxy/Proxy.cpp:511:21
#11 0x7f2da0e5ca14 in js::proxy_Call(JSContext*, unsigned int, JS::Value*) /builds/worker/workspace/build/src/js/src/proxy/Proxy.cpp:770:12
#12 0x7f2da00a1db4 in CallJSNative /builds/worker/workspace/build/src/js/src/jscntxtinlines.h:291:15
#13 0x7f2da00a1db4 in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct) /builds/worker/workspace/build/src/js/src/vm/Interpreter.cpp:455
#14 0x7f2da008cf8a in CallFromStack /builds/worker/workspace/build/src/js/src/vm/Interpreter.cpp:528:12
#15 0x7f2da008cf8a in Interpret(JSContext*, js::RunState&) /builds/worker/workspace/build/src/js/src/vm/Interpreter.cpp:3098
#16 0x7f2da0073250 in js::RunScript(JSContext*, js::RunState&) /builds/worker/workspace/build/src/js/src/vm/Interpreter.cpp:423:12
#17 0x7f2da00a1b2e in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct) /builds/worker/workspace/build/src/js/src/vm/Interpreter.cpp:495:15
#18 0x7f2da00a2632 in js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>) /builds/worker/workspace/build/src/js/src/vm/Interpreter.cpp:541:10
#19 0x7f2da0e7bf82 in js::ForwardingProxyHandler::call(JSContext*, JS::Handle<JSObject*>, JS::CallArgs const&) const /builds/worker/workspace/build/src/js/src/proxy/Wrapper.cpp:176:12
#20 0x7f2da0e29a6d in js::CrossCompartmentWrapper::call(JSContext*, JS::Handle<JSObject*>, JS::CallArgs const&) const /builds/worker/workspace/build/src/js/src/proxy/CrossCompartmentWrapper.cpp:358:23
#21 0x7f2da0e5a181 in js::Proxy::call(JSContext*, JS::Handle<JSObject*>, JS::CallArgs const&) /builds/worker/workspace/build/src/js/src/proxy/Proxy.cpp:511:21
#22 0x7f2da0e5ca14 in js::proxy_Call(JSContext*, unsigned int, JS::Value*) /builds/worker/workspace/build/src/js/src/proxy/Proxy.cpp:770:12
#23 0x7f2da00a1db4 in CallJSNative /builds/worker/workspace/build/src/js/src/jscntxtinlines.h:291:15
#24 0x7f2da00a1db4 in js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstruct) /builds/worker/workspace/build/src/js/src/vm/Interpreter.cpp:455
#25 0x7f2da00a2632 in js::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, js::AnyInvokeArgs const&, JS::MutableHandle<JS::Value>) /builds/worker/workspace/build/src/js/src/vm/Interpreter.cpp:541:10
#26 0x7f2da0b93fcc in JS::Call(JSContext*, JS::Handle<JS::Value>, JS::Handle<JS::Value>, JS::HandleValueArray const&, JS::MutableHandle<JS::Value>) /builds/worker/workspace/build/src/js/src/jsapi.cpp:3036:12
#27 0x7f2d98eea05e in mozilla::dom::EventHandlerNonNull::Call(JSContext*, JS::Handle<JS::Value>, mozilla::dom::Event&, JS::MutableHandle<JS::Value>, mozilla::ErrorResult&) /builds/worker/workspace/build/src/obj-firefox/dom/bindings/EventHandlerBinding.cpp:260:37
#28 0x7f2d99a44963 in Call<nsISupports *> /builds/worker/workspace/build/src/obj-firefox/dist/include/mozilla/dom/EventHandlerBinding.h:362:12
#29 0x7f2d99a44963 in mozilla::JSEventHandler::HandleEvent(nsIDOMEvent*) /builds/worker/workspace/build/src/dom/events/JSEventHandler.cpp:215
#30 0x7f2d99a0a921 in mozilla::EventListenerManager::HandleEventSubType(mozilla::EventListenerManager::Listener*, nsIDOMEvent*, mozilla::dom::EventTarget*) /builds/worker/workspace/build/src/dom/events/EventListenerManager.cpp:1111:51
#31 0x7f2d99a0c832 in mozilla::EventListenerManager::HandleEventInternal(nsPresContext*, mozilla::WidgetEvent*, nsIDOMEvent**, mozilla::dom::EventTarget*, nsEventStatus*) /builds/worker/workspace/build/src/dom/events/EventListenerManager.cpp:1286:20
#32 0x7f2d999f6dcf in mozilla::EventTargetChainItem::HandleEventTargetChain(nsTArray<mozilla::EventTargetChainItem>&, mozilla::EventChainPostVisitor&, mozilla::EventDispatchingCallback*, mozilla::ELMCreationDetector&) /builds/worker/workspace/build/src/dom/events/EventDispatcher.cpp:462:16
#33 0x7f2d999fa705 in mozilla::EventDispatcher::Dispatch(nsISupports*, nsPresContext*, mozilla::WidgetEvent*, nsIDOMEvent*, nsEventStatus*, mozilla::EventDispatchingCallback*, nsTArray<mozilla::dom::EventTarget*>*) /builds/worker/workspace/build/src/dom/events/EventDispatcher.cpp:826:9
#34 0x7f2d9bf9d7f1 in nsDocumentViewer::LoadComplete(nsresult) /builds/worker/workspace/build/src/layout/base/nsDocumentViewer.cpp:1064:7
#35 0x7f2d9f327ae3 in nsDocShell::EndPageLoad(nsIWebProgress*, nsIChannel*, nsresult) /builds/worker/workspace/build/src/docshell/base/nsDocShell.cpp:7867:21
#36 0x7f2d9f323a1a in nsDocShell::OnStateChange(nsIWebProgress*, nsIRequest*, unsigned int, nsresult) /builds/worker/workspace/build/src/docshell/base/nsDocShell.cpp:7661:7
#37 0x7f2d9f32b80f in non-virtual thunk to nsDocShell::OnStateChange(nsIWebProgress*, nsIRequest*, unsigned int, nsresult) /builds/worker/workspace/build/src/docshell/base/nsDocShell.cpp
#38 0x7f2d963459a7 in nsDocLoader::DoFireOnStateChange(nsIWebProgress*, nsIRequest*, int&, nsresult) /builds/worker/workspace/build/src/uriloader/base/nsDocLoader.cpp:1319:3
#39 0x7f2d96344bb1 in nsDocLoader::doStopDocumentLoad(nsIRequest*, nsresult) /builds/worker/workspace/build/src/uriloader/base/nsDocLoader.cpp:862:14
#40 0x7f2d96341844 in nsDocLoader::DocLoaderIsEmpty(bool) /builds/worker/workspace/build/src/uriloader/base/nsDocLoader.cpp:751:9
#41 0x7f2d9634387c in nsDocLoader::OnStopRequest(nsIRequest*, nsISupports*, nsresult) /builds/worker/workspace/build/src/uriloader/base/nsDocLoader.cpp:633:5
#42 0x7f2d9634479c in non-virtual thunk to nsDocLoader::OnStopRequest(nsIRequest*, nsISupports*, nsresult) /builds/worker/workspace/build/src/uriloader/base/nsDocLoader.cpp
#43 0x7f2d94645aea in mozilla::net::nsLoadGroup::RemoveRequest(nsIRequest*, nsISupports*, nsresult) /builds/worker/workspace/build/src/netwerk/base/nsLoadGroup.cpp:629:28
#44 0x7f2d97607b67 in DoUnblockOnload /builds/worker/workspace/build/src/dom/base/nsDocument.cpp:9388:18
#45 0x7f2d97607b67 in nsDocument::UnblockOnload(bool) /builds/worker/workspace/build/src/dom/base/nsDocument.cpp:9310
#46 0x7f2d975df87a in nsDocument::DispatchContentLoadedEvents() /builds/worker/workspace/build/src/dom/base/nsDocument.cpp:5677:3
#47 0x7f2d976636b4 in applyImpl<nsDocument, void (nsDocument::*)()> /builds/worker/workspace/build/src/obj-firefox/dist/include/nsThreadUtils.h:1142:12
#48 0x7f2d976636b4 in apply<nsDocument, void (nsDocument::*)()> /builds/worker/workspace/build/src/obj-firefox/dist/include/nsThreadUtils.h:1148
#49 0x7f2d976636b4 in mozilla::detail::RunnableMethodImpl<nsDocument*, void (nsDocument::*)(), true, (mozilla::RunnableKind)0>::Run() /builds/worker/workspace/build/src/obj-firefox/dist/include/nsThreadUtils.h:1192
#50 0x7f2d9445e8a4 in mozilla::SchedulerGroup::Runnable::Run() /builds/worker/workspace/build/src/xpcom/threads/SchedulerGroup.cpp:396:25
#51 0x7f2d9448517e in nsThread::ProcessNextEvent(bool, bool*) /builds/worker/workspace/build/src/xpcom/threads/nsThread.cpp:1033:14
#52 0x7f2d944a0f00 in NS_ProcessNextEvent(nsIThread*, bool) /builds/worker/workspace/build/src/xpcom/threads/nsThreadUtils.cpp:508:10
#53 0x7f2d9531275a in mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) /builds/worker/workspace/build/src/ipc/glue/MessagePump.cpp:97:21
#54 0x7f2d952699f9 in RunInternal /builds/worker/workspace/build/src/ipc/chromium/src/base/message_loop.cc:326:10
#55 0x7f2d952699f9 in RunHandler /builds/worker/workspace/build/src/ipc/chromium/src/base/message_loop.cc:319
#56 0x7f2d952699f9 in MessageLoop::Run() /builds/worker/workspace/build/src/ipc/chromium/src/base/message_loop.cc:299
#57 0x7f2d9b69a9ba in nsBaseAppShell::Run() /builds/worker/workspace/build/src/widget/nsBaseAppShell.cpp:157:27
#58 0x7f2d9fdd3a1b in XRE_RunAppShell() /builds/worker/workspace/build/src/toolkit/xre/nsEmbedFunctions.cpp:865:22
#59 0x7f2d952699f9 in RunInternal /builds/worker/workspace/build/src/ipc/chromium/src/base/message_loop.cc:326:10
#60 0x7f2d952699f9 in RunHandler /builds/worker/workspace/build/src/ipc/chromium/src/base/message_loop.cc:319
#61 0x7f2d952699f9 in MessageLoop::Run() /builds/worker/workspace/build/src/ipc/chromium/src/base/message_loop.cc:299
#62 0x7f2d9fdd340d in XRE_InitChildProcess(int, char**, XREChildData const*) /builds/worker/workspace/build/src/toolkit/xre/nsEmbedFunctions.cpp:691:34
#63 0x4ee9f5 in content_process_main /builds/worker/workspace/build/src/browser/app/../../ipc/contentproc/plugin-container.cpp:63:30
#64 0x4ee9f5 in main /builds/worker/workspace/build/src/browser/app/nsBrowserApp.cpp:280
#65 0x7f2db331c82f in __libc_start_main /build/glibc-bfm8X4/glibc-2.23/csu/../csu/libc-start.c:291
Comment 1•8 years ago
|
||
TabChild::RemoteSizeShellTo was written by Gabor but mconley reviewed so please needinfo him once you have a reduced test case, Jason. Thanks.
Flags: needinfo?(jkratzer)
Priority: -- → P2
| Reporter | ||
Comment 2•8 years ago
|
||
Attempts to reduce the testcase further limited its reliability. In order to reproduce using the attached testcase, unpack the archive and start a local webserver in that directory. Then point Firefox at http://localhost/harness.html.
Please note that this testcase likely requires the included prefs.js file as well as the fuzzPriv extension which can be found at the following URL:
https://github.com/MozillaSecurity/domfuzz/tree/master/dom/extension
Flags: needinfo?(jkratzer)
| Reporter | ||
Updated•8 years ago
|
Flags: needinfo?(mconley)
| Reporter | ||
Updated•8 years ago
|
Keywords: testcase-wanted → testcase
| Assignee | ||
Comment 3•8 years ago
|
||
Thanks, I think I've reproduced it. Analyzing...
| Assignee | ||
Updated•8 years ago
|
Assignee: nobody → mconley
| Comment hidden (mozreview-request) |
| Assignee | ||
Updated•8 years ago
|
Flags: needinfo?(mconley)
| Assignee | ||
Updated•8 years ago
|
Attachment #8932522 -
Flags: review?(nika)
| Assignee | ||
Comment 5•8 years ago
|
||
Looks like this got dropped - redirecting review.
Comment 6•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8932522 [details]
Bug 1420902 - Bail out of RemoteSizeShellTo if the docShell has gone away.
https://reviewboard.mozilla.org/r/203568/#review218348
Attachment #8932522 -
Flags: review?(nika) → review+
Pushed by mconley@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/eb8c89d823a6
Bail out of RemoteSizeShellTo if the docShell has gone away. r=mystor
Comment 8•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox59:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Updated•8 years ago
|
status-firefox57:
--- → wontfix
status-firefox58:
--- → wontfix
status-firefox-esr52:
--- → unaffected
Flags: in-testsuite-
You need to log in
before you can comment on or make changes to this bug.
Description
•