Bug 1420902 - Bail out of RemoteSizeShellTo if the docShell has gone away. r=mystor

MozReview-Commit-ID: 4X3bfSeHGiA

--HG--
extra : rebase_source : 7af7001d7158053f66f205a49b514d24103a379f